[gd_scene format=3 uid="uid://1r7qeyebm7rx"]

[ext_resource type="Script" uid="uid://ctct0s1udq57v" path="res://addons/cognite/editor/scripts/itens/perception_item.gd" id="1_ta6m6"]
[ext_resource type="StyleBox" uid="uid://45k1jrxg4nlw" path="res://addons/cognite/assets/light_background.stylebox" id="2_0mx6j"]
[ext_resource type="Texture2D" uid="uid://v4ltv3yeg71a" path="res://addons/cognite/assets/close.svg" id="3_knu8p"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0mx6j"]
content_margin_left = 6.0
content_margin_top = 6.0
content_margin_right = 6.0
content_margin_bottom = 6.0
bg_color = Color(0.14901961, 0.16078432, 0.1764706, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.3882353, 0.61960787, 0.41960785, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="PanelContainer" type="PanelContainer" unique_id=1333979134]
offset_top = 62.0
offset_right = 354.0
offset_bottom = 62.0
theme_override_styles/panel = SubResource("StyleBoxFlat_0mx6j")
script = ExtResource("1_ta6m6")

[node name="perception_item" type="VBoxContainer" parent="." unique_id=1503019183]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="perception_item" unique_id=254930983]
layout_mode = 2

[node name="property_name" type="LineEdit" parent="perception_item/HBoxContainer" unique_id=1092580141]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Property:"

[node name="PanelContainer" type="PanelContainer" parent="perception_item/HBoxContainer" unique_id=847259614]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
theme_override_styles/panel = ExtResource("2_0mx6j")

[node name="property_type" type="MenuButton" parent="perception_item/HBoxContainer/PanelContainer" unique_id=1256925686]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
text = "Boolean"
icon_alignment = 1
item_count = 4
popup/item_0/text = "Property Type"
popup/item_0/id = 9999
popup/item_0/disabled = true
popup/item_0/separator = true
popup/item_1/text = "boolean"
popup/item_1/id = 0
popup/item_2/text = "float - int"
popup/item_2/id = 1
popup/item_3/text = "string"
popup/item_3/id = 2

[node name="delete" type="Button" parent="perception_item/HBoxContainer" unique_id=876568265]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
focus_mode = 0
theme_override_colors/icon_normal_color = Color(1, 1, 1, 0.57254905)
icon = ExtResource("3_knu8p")
flat = true
icon_alignment = 1
expand_icon = true

[connection signal="pressed" from="perception_item/HBoxContainer/delete" to="." method="_on_delete_pressed"]
